Work in progress

--- a/biodetail.html
+++ b/biodetail.html
@@ -148,13 +148,13 @@
 <!--the section which is hidden -->
 
 <div id="showen">
-    <section class="hero" id="hero2">
+    <section class="hero" id="hero">
         <div class="container-hero">
             <div class=" header-container">
                 <div class=" white-color headerlogo" >
                     <a href="/litecure/home.html"><img src="assets/logos/logos1.png" width="135px" height="57px" alt="companionlogo"></a>
                 </div>
-                <div class="text-right headerlogo1">TEAM</div>
+                <div class="text-right headerlogo1">BLOG</div>
             </div>
             <div class="text-container">
 
@@ -217,10 +217,10 @@
         </div>
     </section>
     <!--subscribe section start-->
-    <section class="subscribe-container ">
+    <section class="subscribe-container subscribe-area-container">
         <div class="main">
-            <div class="extra-clr">
-                <div class="less-margin">
+            <div class="subscribing-area extra-clr">
+                <div class="sub">
                     <div class=" Subscribe">
                         <p>Subscribe</p>
                     </div>
@@ -247,7 +247,7 @@
     <!--subscribe section end -->
 
     <!--footer overall start-->
-    <section class="footer-container">
+    <section class="footer-container subscribe-area-container">
         <div class="foot-area extra-clr">
             <div class="footer-area">
                 <div class="list1">
