--- a/story.html
+++ b/story.html
@@ -444,7 +444,7 @@
         </div>
     </section>
     <!--subscribe section start-->
-    <section class="subscribe-container ">
+    <section class="subscribe-container subscribe-area-container ">
         <div class="main">
             <div class="subscribing-area3">
                 <div class="sub">
@@ -474,7 +474,7 @@
     <!--subscribe section end -->
 
     <!--footer overall start-->
-    <section class="footer-container">
+    <section class="footer-container subscribe-area-container">
         <div class="foot-area3">
             <div class="footer-area">
                 <div class="list1">
