--- a/emergingtrends.html
+++ b/emergingtrends.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Academy Landing Page</title>
+    <title>Academy Landing Page: Emerging Trends</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -150,7 +150,7 @@
 <div id="showen">
 
     <!--this the main header dog and girl wala section -->
-    <section class="hero" id="hero">
+    <section class="hero"  id="emerging">
         <div class="main-container">
             <div class="container-1">
                 <div class="white-color headerlogo" >
@@ -218,7 +218,8 @@
 
 
             </div>
-            <div class=" text-right secondnav2">
+            <div class=" text-right secondnav2 Business-h-footer">
+                <h2>EMERGING TRENDS</h2>
                 <p>Firstname Lastname; Job Title, w/ Petname; his / her [x] yr old Pet Type</p>
             </div>
         </div>
@@ -229,28 +230,34 @@
 </section>
     <!--      next section start      -->
     <!--the two dives-->
-    <section class="the-three-dives">
+    <section class="the-three-dives business-page-bg">
         <div class="main-area">
             <div class="row-flex">
-                <div class="  col1 two-div1" >
+                <div class=" col1 two-div1 business-list" >
                     <div class="container-main">
                         <div class="row aligninng hite-one">
                             <ul>
                                 <li><a href="" class="white-color">LiteCure Academy</a></li>
                                 <li><a href="">Pain Management</a></li>
-                                <li><a href="">Minimally Invasive</a></li>
+                                <li><a href="" >Minimally Invasive</a></li>
                                 <li><a href="">Wellness</a></li>
-                                <li><a href="">Emerging Trends</a></li>
+                                <li><a href="" class="white-color">Emerging Trends</a></li>
                                 <li><a href="">School of Business</a></li>
                             </ul>
+
 
 
                         </div>
                     </div>
                 </div>
-                <div class=" col4 hite two-div2" >
-                    <div class="container mt-4 mb-5">
-
+                <div class=" col4 hite two-div2 emerging-img" >
+                    <div class="container-text mt-4 mb-5">
+                            <p class="two-div-1"> <a href="#">Podcasts</a></p>
+                            <p class="two-div-1"> <a href="#">Webinars</a></p>
+                            <p class="two-div-1"> <a href="#">CE Courses</a></p>
+                            <p class="two-div-1"> <a href="#">Videos</a></p>
+                            <p class="two-div-1"> <a href="#">Downloads</a></p>
+                            <p class="two-div-1"> <a href="#">Live Courses</a></p>
                     </div>
                 </div>
             </div>
@@ -268,8 +275,8 @@
 
             <div class="header">
                 <div class="course-container">
-                    <div class="course-text"><p>Top CE courses</p></div>
-                    <div class="course-text1"><p>View all <p><div><i class="fa fa-chevron-right" ></i></div></div>
+                    <div class="course-text"><p class="p-text"><span class="red-text-live">Emerging Trends</span>Top CE courses</p></div>
+                    <div class="course-text1 business-arrow"><p>VIEW ALL <p><div><i class="fa fa-chevron-right" ></i></div></div>
                 </div>
                 <div class="col-sm-12 " >
                     <div class="row mx-0 hiding1">
@@ -411,9 +418,9 @@
     <!-- live education sources  -->
 <section class="slider-area">
               <div class="txt-header-section">
-                <div class="course-container slider-course">
-                <div class="course-text"><p>Top videos</p></div>
-                    <div class="course-text1"><p>VIEW ALL <p><div><i class="fa fa-chevron-right" ></i></div></div>
+                <div class="course-container slider-course video-header">
+                <div class="course-text"><p class="footer-p"><span class="red-text-live">Emerging Trends</span>Top videos</p></div>
+                    <div class="course-text1 arrow-secondry"><p>VIEW ALL <p><div><i class="fa fa-chevron-right" ></i></div></div>
                 </div>
             </div>
               <div class="slider-container">
@@ -591,7 +598,9 @@
                 <div class="carousel-iner" role="listbox">
                     <div class="item active ">
                         <div class="row mb-5 resource-align">
-                            <div class="header-text "><p><span>Top resource downloads</span></p></div>
+                            <div class="header-text business-download "><p class="download-text"><span class="text-b">Emerging Trends</span>
+                                Resource downloads
+                                 </p></div>
                             <div class="header-text-one resource-header">
                             
                             </div>
@@ -695,8 +704,8 @@
         
                 <div class="header">
                    <div class="course-container">
-                       <div class="course-text live-footer-txt"><p>Top live Courses</p></div>
-                       <div class="course-text1"><p>View all <p><div><i class="fa fa-chevron-right" ></i></div></div>
+                       <div class="course-text live-footer-txt minimally-text"><p><span>Emerging Trends</span>Live Courses</p></div>
+                       <div class="course-text1 "><p>VIEW ALL <p><div><i class="fa fa-chevron-right" ></i></div></div>
                    </div>
                     <div class="col-sm-12 " >
                         <div class="row mx-0 hiding1">
