--- a/dashboard.html
+++ b/dashboard.html
@@ -250,65 +250,30 @@
     <!--account section-->
     <!--slider-->
     <section class="slider ">
-        <div class="inner-diving">
-            <div id="myCarousel1" class="carousel slide" data-ride="">
+        <div class="innerslider">
+            <div id="myCarousel1 " class="carousel slide slider-hite" data-ride="1000">
+                <!-- Indicators -->
+
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active slider-width">
-                        <div class="custom-row">
-                            <div class="  first-div ">
-                                <p>Latest</p>
+                        <div class="custom-row content-justified">
+                            <div class="col-one  first-div ">
+                                <div ><p class="first-div-p">Latest</p></div>
+
                             </div>
-                            <div class=" second-div ">
-                                <p >TRACK NAME</p>
-                                <p>ADD TAG HERE</p>
-                                <p class="pt-4">Course title goes<br> here like this in<br> long form</p>
-                                <p>Instructor Name</p>
-                                <p class="pt-2">Additional  descriptive text goes<br> here in this format for schema and<br> taxonomy purposes </p>
-                                <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE</p>
-                                    <div ><i class="fa fa-chevron-right" ></i></div>
-                                </div>
-                            </div>
-                            <div class="    third-div ">
+                            <div class=" col-three   second-div pl-4 pt-4">
                                 <div class="row-1 ">
-                                    <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
-                                    <div class="col-sm-5 "><p class="row-2-p pr-5"> 06.21</p></div>
+                                    <div class="col-sm"><p class="row-1-p"><br><span class="row-1-span">TRACK NAME<BR>ADD TAG HERE</span></p></div>
+
                                 </div>
                                 <div class="row-2  pl-4">
-                                    <p>EVENT<br>
+                                    <p>Tradeshow<br>
                                         NAME GOES HERE</P>
                                 </div>
                                 <div class="row-3  pl-4">
                                     <p>Booth informaiton additional <br> text goes here including metas</p>
                                 </div>
-                                <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
-                                    <div ><i class="fa fa-chevron-right" ></i></div>
-                                </div>
-                            </div>
-                            <div class=" fourth-div ">
-                                <p class="pt-3">NEW ITEMS</p>
-                                <p class="">ADD TAG HERE</p>
-                                <p class="pt-4">NEW TITLE GOE
-                                    <BR>here like this<br> long form
-                                </p>
-                                <p>New Product</p>
-                                <p class="pt-4">additinal description<br>will be here</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item slider-width" >
-                        <div class="row">
-                            <div class="col-one  first-div text-left m-0 pl-6 pt-5">
-                                <p>Latest</p>
-                            </div>
-                            <div class="col-two second-div pl-5 pt-5">
-                                <p >TRACK NAME</p>
-                                <p>ADD TAG HERE</p>
-                                <p class="pt-4">Course title goes<br> here like this in<br> long form</p>
-                                <p>Instructor Name</p>
-                                <p class="pt-2">Additional  descriptive text goes<br> here in this format for schema and<br> taxonomy purposes </p>
                                 <div class="learn-more text-right">
                                     <p  class="learn-more-p">LEARN MORE</p>
                                     <div ><i class="fa fa-chevron-right" ></i></div>
@@ -317,10 +282,10 @@
                             <div class=" col-three   third-div pl-4 pt-4">
                                 <div class="row-1 ">
                                     <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
-                                    <div class="col-sm-5 "><p class="row-2-p pr-5"> 06.21</p></div>
+                                    <div class="col-sm-5 "><p class="row-2-p pr-5"> 21</p></div>
                                 </div>
                                 <div class="row-2  pl-4">
-                                    <p>EVENT<br>
+                                    <p>Tradeshow<br>
                                         NAME GOES HERE</P>
                                 </div>
                                 <div class="row-3  pl-4">
@@ -331,14 +296,84 @@
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
-                            <div class="col-four fourth-div pl-4 pt-4">
-                                <p class="pt-3">NEW ITEMS</p>
-                                <p class="">ADD TAG HERE</p>
-                                <p class="pt-4">NEW TITLE GOE
-                                    <BR>here like this<br> long form
-                                </p>
-                                <p>New Product</p>
-                                <p class="pt-4">additinal description<br>will be here</p>
+                            <div class=" col-three special-bg   second-div pl-4 pt-4">
+                                <div class="row-1 ">
+                                    <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
+                                    <div class="col-sm-6 "><p class="row-2-p pr-5"> 06-09</p></div>
+                                </div>
+                                <div class="row-2  pl-4">
+                                    <p>Tradeshow<br>
+                                        NAME GOES HERE</P>
+                                </div>
+                                <div class="row-3  pl-4">
+                                    <p>Booth informaiton additional <br> text goes here including metas</p>
+                                </div>
+                                <div class="learn-more text-right">
+                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <div ><i class="fa fa-chevron-right" ></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item  slider-width">
+                        <div class="custom-row content-justified">
+                            <div class="col-one  first-div ">
+                                <div ><p class="first-div-p">Upcoming<span><br>Conference<br> Events</span></p></div>
+                                <div class="chevron-next">
+                                    <p>VIEW ALL</p>
+                                    <div class="chevron-next-div"><i class="fa fa-chevron-right" ></i></div>
+                                </div>
+                            </div>
+                            <div class=" col-three   second-div pl-4 pt-4">
+                                <div class="row-1 ">
+                                    <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
+                                    <div class="col-sm-6 "><p class="row-2-p pr-5"> 06-09</p></div>
+                                </div>
+                                <div class="row-2  pl-4">
+                                    <p>Tradeshow<br>
+                                        NAME GOES HERE</P>
+                                </div>
+                                <div class="row-3  pl-4">
+                                    <p>Booth informaiton additional <br> text goes here including metas</p>
+                                </div>
+                                <div class="learn-more text-right">
+                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <div ><i class="fa fa-chevron-right" ></i></div>
+                                </div>
+                            </div>
+                            <div class=" col-three   third-div pl-4 pt-4">
+                                <div class="row-1 ">
+                                    <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
+                                    <div class="col-sm-5 "><p class="row-2-p pr-5"> 21</p></div>
+                                </div>
+                                <div class="row-2  pl-4">
+                                    <p>Tradeshow<br>
+                                        NAME GOES HERE</P>
+                                </div>
+                                <div class="row-3  pl-4">
+                                    <p>Booth informaiton additional <br> text goes here including metas</p>
+                                </div>
+                                <div class="learn-more text-right">
+                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <div ><i class="fa fa-chevron-right" ></i></div>
+                                </div>
+                            </div>
+                            <div class=" col-three   second-div pl-4 pt-4">
+                                <div class="row-1 ">
+                                    <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
+                                    <div class="col-sm-6 "><p class="row-2-p pr-5"> 06-09</p></div>
+                                </div>
+                                <div class="row-2  pl-4">
+                                    <p>Tradeshow<br>
+                                        NAME GOES HERE</P>
+                                </div>
+                                <div class="row-3  pl-4">
+                                    <p>Booth informaiton additional <br> text goes here including metas</p>
+                                </div>
+                                <div class="learn-more text-right">
+                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <div ><i class="fa fa-chevron-right" ></i></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -346,11 +381,13 @@
                 <!-- Left and right controls -->
                 <a class="right myCarousel1" href="#myCarousel1" data-slide="next">
                     <div  class="slidericon2">
-                        <i class="fa fa-angle-right" ></i>
+                        <img src="assets/slider-right-arrow.png">
                     </div>
                 </a>
             </div>
+
         </div>
+
     </section>
 
     <!--slider-->
