--- a/dashboard.html
+++ b/dashboard.html
@@ -292,7 +292,7 @@
                                     <p>Booth informaiton additional <br> text goes here including metas</p>
                                 </div>
                                 <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <p  class="learn-more-p">LEARN MORE </p>
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     <p>Booth informaiton additional <br> text goes here including metas</p>
                                 </div>
                                 <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <p  class="learn-more-p">LEARN MORE </p>
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
@@ -318,16 +318,13 @@
                     <div class="item  slider-width">
                         <div class="custom-row content-justified">
                             <div class="col-one  first-div ">
-                                <div ><p class="first-div-p">Upcoming<span><br>Conference<br> Events</span></p></div>
-                                <div class="chevron-next">
-                                    <p>VIEW ALL</p>
-                                    <div class="chevron-next-div"><i class="fa fa-chevron-right" ></i></div>
-                                </div>
+                                <div ><p class="first-div-p">Latest</p></div>
+
                             </div>
                             <div class=" col-three   second-div pl-4 pt-4">
                                 <div class="row-1 ">
-                                    <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
-                                    <div class="col-sm-6 "><p class="row-2-p pr-5"> 06-09</p></div>
+                                    <div class="col-sm"><p class="row-1-p"><br><span class="row-1-span">TRACK NAME<BR>ADD TAG HERE</span></p></div>
+
                                 </div>
                                 <div class="row-2  pl-4">
                                     <p>Tradeshow<br>
@@ -337,7 +334,7 @@
                                     <p>Booth informaiton additional <br> text goes here including metas</p>
                                 </div>
                                 <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <p  class="learn-more-p">LEARN MORE</p>
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
@@ -354,11 +351,11 @@
                                     <p>Booth informaiton additional <br> text goes here including metas</p>
                                 </div>
                                 <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <p  class="learn-more-p">LEARN MORE </p>
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
-                            <div class=" col-three   second-div pl-4 pt-4">
+                            <div class=" col-three special-bg   second-div pl-4 pt-4">
                                 <div class="row-1 ">
                                     <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
                                     <div class="col-sm-6 "><p class="row-2-p pr-5"> 06-09</p></div>
@@ -371,7 +368,7 @@
                                     <p>Booth informaiton additional <br> text goes here including metas</p>
                                 </div>
                                 <div class="learn-more text-right">
-                                    <p  class="learn-more-p">LEARN MORE &amp; REGISTER</p>
+                                    <p  class="learn-more-p">LEARN MORE </p>
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
