--- a/dashboard.html
+++ b/dashboard.html
@@ -298,12 +298,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item slider-width" >
-                        <div class="row">
-                            <div class="col-one  first-div text-left m-0 pl-6 pt-5">
+                    <div class="item  slider-width">
+                        <div class="custom-row">
+                            <div class="  first-div ">
                                 <p>Latest</p>
                             </div>
-                            <div class="col-two second-div pl-5 pt-5">
+                            <div class=" second-div ">
                                 <p >TRACK NAME</p>
                                 <p>ADD TAG HERE</p>
                                 <p class="pt-4">Course title goes<br> here like this in<br> long form</p>
@@ -314,7 +314,7 @@
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
-                            <div class=" col-three   third-div pl-4 pt-4">
+                            <div class="    third-div ">
                                 <div class="row-1 ">
                                     <div class="col-sm-2 "><p class="row-1-p">CITY,STATE<br><span class="row-1-span">MONTH</span></p></div>
                                     <div class="col-sm-5 "><p class="row-2-p pr-5"> 06.21</p></div>
@@ -331,7 +331,7 @@
                                     <div ><i class="fa fa-chevron-right" ></i></div>
                                 </div>
                             </div>
-                            <div class="col-four fourth-div pl-4 pt-4">
+                            <div class=" fourth-div ">
                                 <p class="pt-3">NEW ITEMS</p>
                                 <p class="">ADD TAG HERE</p>
                                 <p class="pt-4">NEW TITLE GOE
@@ -346,7 +346,7 @@
                 <!-- Left and right controls -->
                 <a class="right myCarousel1" href="#myCarousel1" data-slide="next">
                     <div  class="slidericon2">
-                        <i class="fa fa-angle-right" ></i>
+                        <img src="assets/slider-right-arrow.png">
                     </div>
                 </a>
             </div>
